@@ -1,3 +1,16 @@
+2013-07-01  Manjunath Matti  <mmatti@caviumnetworks.com>
+	
+	2013-02-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/55374
+	* config/gnu-user.h (LIBTSAN_EARLY_SPEC): Define.
+	(STATIC_LIBTSAN_LIBS): Likewise.
+	* gcc.c (ADD_STATIC_LIBTSAN_LIBS, LIBTSAN_EARLY_SPEC): Define.
+	(LIBTSAN_SPEC): Add ADD_STATIC_LIBTSAN_LIBS, if LIBTSAN_EARLY_SPEC
+	is defined, don't add anything else beyond that.
+	(SANITIZER_EARLY_SPEC, SANITIZER_SPEC): Define.
+	(LINK_COMMAND_SPEC): Use them.
+
 2013-06-29  Andrew Pinski  <apinski@cavium.com>
 
 	* gimple.h (gsi_stmt): Allow for NULL
